# cocoindex

./: pyproject.toml
examples/text_embedding_milvus/: .env  README.md  main.py  pyproject.toml
python/cocoindex/targets/: milvus.py
python/cocoindex/tests/targets/: test_milvus_unit.py
